@startuml database
skinparam classAttributeIconSize 0
!pragma ratio 0.70
hide circle
skinparam linetype ortho

entity Users {
    userID: integer <<PK>>
    ---
    username: varchar(100)
    email: varchar(200)
    password: varchar(300)
}

entity Place {
    placeID: integer <<PK>>
    userID: integer <<FK>>
    ---
    type: varchar(100)
    name: varchar(200)
    location: varchar(300)
    about: varchar(1500)
    address: varchar(300)
    hours: varchar(300)
    price: varchar(100)
    contact: varchar(300)
    website: varchar(500)
    accessibility: varchar(300)
    duration: integer
    photos: varchar(2000)
    latitude: decimal(9,6)
    longitude: decimal(9,6)
}

entity Review {
    reviewID: integer <<PK>>
    userID: integer <<FK>>
    placeID: integer <<FK>>
    ---
    comment: varchar(500)
    rating: integer
    created_at: timestamp
}

entity Wishlist {
    wishlistID: integer <<PK>>
    userID: integer <<FK>>
    placeID: integer <<FK>>
    ---
    created_at: timestamp
}

Users ||--o{ Review : "writes"
Place ||--o{ Review : "receives"
Users ||--o{ Wishlist : "saves to"
Wishlist }o--|| Place : "is saved to"

